--- a/Pharma_Beibora_Flip.html
+++ b/Pharma_Beibora_Flip.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Dashboard Rotator</title>
+  <title>Pharma_Beibora_Flip</title>
   <style>
     html, body {
       margin: 0;
@@ -96,8 +96,8 @@
 
   <script>
     const dashboards = [
-      { url: "Beibora_Telesales_Statistics.html", duration: 60000 }, 
-      { url: "Pharma_Telesales_Statistics.html", duration: 120000 }
+      { url: "Beibora_Telesales_Statistics.html", duration: 5000 }, 
+      { url: "Pharma_Telesales_Statistics.html", duration: 5000 }
     ];
 
     let index = 0;
@@ -127,7 +127,7 @@
         second: '2-digit'
       }).replace(',', '');
       
-      overlayTitle.textContent = `TELESALES PERFORMANCE AS AT ${formattedTime} | # OPERATION NIGHT HAMMER`;
+      overlayTitle.textContent = `PHARMA/BEIBORA TELESALES PERFORMANCE AS AT ${formattedTime} | # OPERATION NIGHT HAMMER`;
 
       // Show overlay banner
       overlay.style.display = "flex";
@@ -157,7 +157,6 @@
 
 </body>
 </html>
-
 
 
 
