--- a/Beibora_Flip.html
+++ b/Beibora_Flip.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Beibora Dashboard Flip</title>
+  <title>Beibora_Dashboard_Flip</title>
   <style>
     html, body {
       margin: 0;
@@ -112,8 +112,8 @@
     updateHeader();
 
     // --- Flip Timing (Persistent) ---
-    const beiboraDuration = 300000; // 5 minutes
-    const bannerDuration = 15000;  // 15 seconds
+    const beiboraDuration = 180000; // 3 minutes
+    const bannerDuration = 10000;  // 10 seconds
     let showingBanner = false;
 
     function flipCycle() {
@@ -159,3 +159,4 @@
 
 </body>
 </html>
+
