--- a/Pharma_Beibora_Flip.html
+++ b/Pharma_Beibora_Flip.html
@@ -23,7 +23,7 @@
       left: 0;
       opacity: 0;
       z-index: 0;
-      transition: opacity 1s ease-in-out, transform 1s ease-in-out;
+      transition: opacity 1s ease-in-out, transform 3s ease-in-out; /* ⏳ Slower rotation */
       transform-style: preserve-3d;
       backface-visibility: hidden;
     }
