--- a/Pharma_Flip.html
+++ b/Pharma_Flip.html
@@ -13,40 +13,22 @@
       font-family: Arial, sans-serif;
     }
 
-    .flip-container {
-      perspective: 1200px;
-      width: 100%;
-      height: 100%;
-      position: relative;
-      background: black;
-    }
-
-    .flipper {
-      width: 100%;
-      height: 100%;
-      transform-style: preserve-3d;
-      transition: transform 2.5s ease-in-out; /* slower & smoother */
-      will-change: transform;
-    }
-
-    .flip {
-      transform: rotateY(180deg);
-    }
-
-    .front, .back {
+    .screen {
       position: absolute;
       width: 100%;
       height: 100%;
-      backface-visibility: hidden;
-      -webkit-backface-visibility: hidden;
       top: 0;
       left: 0;
-      background: black; /* prevents black flash */
-      transform: translateZ(0); /* force GPU rendering */
+      opacity: 0;
+      transform: scale(1) rotateY(0deg);
+      transition: opacity 1.5s ease-in-out, transform 1.5s ease-in-out;
+      background: black;
     }
 
-    .back {
-      transform: rotateY(180deg);
+    .active {
+      opacity: 1;
+      transform: scale(1) rotateY(0deg);
+      z-index: 2;
     }
 
     iframe {
@@ -54,7 +36,6 @@
       height: 100%;
       border: none;
       background: black;
-      transform: translateZ(0);
     }
 
     header {
@@ -70,38 +51,35 @@
       color: #00ffcc;
       text-shadow: 1px 1px 4px black;
       border-bottom: 2px solid #00ffcc;
-      z-index: 2;
+      z-index: 3;
     }
   </style>
 </head>
 <body>
 
-  <div class="flip-container">
-    <div class="flipper" id="flipper">
-      <!-- FRONT: Pharma dashboard -->
-      <div class="front">
-        <iframe id="pharmaFrame"></iframe>
-      </div>
+  <!-- Pharma dashboard -->
+  <div class="screen active" id="pharmaScreen">
+    <iframe id="pharmaFrame"></iframe>
+  </div>
 
-      <!-- BACK: Banner page -->
-      <div class="back">
-        <iframe id="bannerFrame"></iframe>
-        <header id="overlayTitle"></header>
-      </div>
-    </div>
+  <!-- Banner screen -->
+  <div class="screen" id="bannerScreen">
+    <iframe id="bannerFrame"></iframe>
+    <header id="overlayTitle"></header>
   </div>
 
   <script>
-    const flipper = document.getElementById("flipper");
+    const pharmaScreen = document.getElementById("pharmaScreen");
+    const bannerScreen = document.getElementById("bannerScreen");
     const overlayTitle = document.getElementById("overlayTitle");
     const pharmaFrame = document.getElementById("pharmaFrame");
     const bannerFrame = document.getElementById("bannerFrame");
 
-    // 🧠 Load fresh data each time (bypass cache)
+    // 🧠 Load fresh content
     pharmaFrame.src = "Pharma_Telesales_Statistics.html?nocache=" + new Date().getTime();
     bannerFrame.src = "Banner.html?nocache=" + new Date().getTime();
 
-    // ⏰ Live clock update for header
+    // ⏰ Live updating header time
     function updateHeader() {
       const now = new Date();
       const formattedTime = now.toLocaleString('en-GB', {
@@ -118,30 +96,30 @@
     setInterval(updateHeader, 1000);
     updateHeader();
 
-    // --- Flip cycle configuration ---
+    // --- Flip timing ---
     const pharmaDuration = 300000; // 5 minutes
     const bannerDuration = 15000;  // 15 seconds
     let showingBanner = false;
 
-    function flipCycle() {
+    function switchScreens() {
       if (showingBanner) {
-        // Switch back to Pharma dashboard
-        flipper.classList.remove("flip");
+        // Back to Pharma
+        bannerScreen.classList.remove("active");
+        pharmaScreen.classList.add("active");
         showingBanner = false;
         localStorage.setItem('lastFlip', Date.now());
-        setTimeout(flipCycle, pharmaDuration);
+        setTimeout(switchScreens, pharmaDuration);
       } else {
-        // Switch to Banner
-        setTimeout(() => { // small delay ensures smoother GPU transition
-          flipper.classList.add("flip");
-        }, 100);
+        // To Banner
+        pharmaScreen.classList.remove("active");
+        bannerScreen.classList.add("active");
         showingBanner = true;
         localStorage.setItem('lastFlip', Date.now());
-        setTimeout(flipCycle, bannerDuration);
+        setTimeout(switchScreens, bannerDuration);
       }
     }
 
-    // --- Maintain correct view after refresh ---
+    // --- Persist current phase after refresh ---
     const lastFlip = localStorage.getItem('lastFlip');
     if (lastFlip) {
       const elapsed = Date.now() - lastFlip;
@@ -149,22 +127,25 @@
       const modTime = elapsed % totalCycle;
 
       if (modTime < pharmaDuration) {
-        // Still in Pharma phase
-        flipper.classList.remove("flip");
+        // Still in Pharma
+        pharmaScreen.classList.add("active");
+        bannerScreen.classList.remove("active");
         showingBanner = false;
-        setTimeout(flipCycle, pharmaDuration - modTime);
+        setTimeout(switchScreens, pharmaDuration - modTime);
       } else {
-        // Should be showing Banner
-        flipper.classList.add("flip");
+        // Show Banner
+        pharmaScreen.classList.remove("active");
+        bannerScreen.classList.add("active");
         showingBanner = true;
-        setTimeout(flipCycle, totalCycle - modTime);
+        setTimeout(switchScreens, totalCycle - modTime);
       }
     } else {
-      // First load: start with Pharma for 5 minutes
-      flipper.classList.remove("flip");
+      // First load
+      pharmaScreen.classList.add("active");
+      bannerScreen.classList.remove("active");
       showingBanner = false;
       localStorage.setItem('lastFlip', Date.now());
-      setTimeout(flipCycle, pharmaDuration);
+      setTimeout(switchScreens, pharmaDuration);
     }
   </script>
 
