--- a/Pharma_Beibora_Flip.html
+++ b/Pharma_Beibora_Flip.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Pharma_Beibora_Flowers</title>
+  <title>Pharma_Beibora_Flip</title>
   <style>
     html, body {
       margin: 0;
@@ -13,6 +13,7 @@
       font-family: Arial, sans-serif;
     }
 
+    /* Dashboard frame */
     iframe {
       width: 100%;
       height: calc(100vh - 10px);
@@ -22,7 +23,7 @@
       left: 0;
       opacity: 0;
       z-index: 0;
-      transition: opacity 1s ease-in-out;
+      transition: opacity 1s ease-in-out, transform 1s ease-in-out;
     }
 
     iframe.active {
@@ -30,14 +31,18 @@
       z-index: 1;
     }
 
-    /* --- Overlay with banner and flower animation --- */
+    /* --- Updated Transition: slide-up --- */
+    .slide-up { transform: translateY(100%); }
+    .slide-up.active { transform: translateY(0); }
+
+    /* Overlay for banner */
     #imageOverlay {
       position: fixed;
       top: 0;
       left: 0;
       width: 100%;
       height: 100%;
-      background: rgba(0,0,0,0.85);
+      background: black;
       display: none;
       flex-direction: column;
       align-items: flex-start;
@@ -46,9 +51,9 @@
       opacity: 0;
       transition: opacity 1s ease-in-out;
       color: white;
-      overflow: hidden;
     }
 
+    /* Banner header with styled background */
     #imageOverlay header {
       position: absolute;
       top: 0;
@@ -61,39 +66,38 @@
       font-weight: bold;
       color: #00ffcc;
       text-shadow: 1px 1px 4px black;
-      border-bottom: 2px solid #00ffcc;
       z-index: 2;
+      border-bottom: 2px solid #00ffcc;
     }
 
-    /* 🌸 Flower animation styles */
-    .flower {
+    /* Fullscreen background image */
+    #imageOverlay img {
       position: absolute;
-      width: 50px;
-      height: 50px;
-      background-size: cover;
-      animation: dance 5s linear infinite;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      z-index: 1;
       opacity: 0.8;
-    }
-
-    @keyframes dance {
-      0%   { transform: translateY(100vh) rotate(0deg) scale(0.8); opacity: 1; }
-      50%  { transform: translateY(50vh) rotate(180deg) scale(1.2); }
-      100% { transform: translateY(-10vh) rotate(360deg) scale(0.8); opacity: 0; }
     }
   </style>
 </head>
 <body>
 
+  <!-- Dashboard container -->
   <iframe id="dashboardFrame"></iframe>
 
+  <!-- Image + title overlay -->
   <div id="imageOverlay">
+    <img src="https://bestcoder-123.github.io/Tellesales-Dashboard/Logo_Title.jpg" alt="Telesales Performance">
     <header id="overlayTitle"></header>
   </div>
 
   <script>
     const dashboards = [
-      { url: "Pharma_Telesales_Statistics.html", duration: 60000 },
-      { url: "Beibora_Telesales_Statistics.html", duration: 60000 }
+      { url: "Beibora_Telesales_Statistics.html", duration: 60000 }, 
+      { url: "Pharma_Telesales_Statistics.html", duration: 120000 }
     ];
 
     let index = 0;
@@ -101,75 +105,58 @@
     const overlay = document.getElementById("imageOverlay");
     const overlayTitle = document.getElementById("overlayTitle");
     let rotationTimer;
-    let clockInterval;
-
-    function startLiveClock() {
-      clearInterval(clockInterval);
-      function updateClock() {
-        const now = new Date();
-        const formattedTime = now.toLocaleString('en-GB', {
-          day: '2-digit', month: 'short', year: 'numeric',
-          hour: '2-digit', minute: '2-digit', second: '2-digit'
-        }).replace(',', '');
-        overlayTitle.textContent =
-          `PHARMA/BEIBORA TELESALES PERFORMANCE AS AT ${formattedTime} | # OPERATION NIGHT HAMMER`;
-      }
-      updateClock();
-      clockInterval = setInterval(updateClock, 1000);
-    }
-
-    // 🌸 Function to create dancing flowers
-    function showDancingFlowers() {
-      const flowerImages = [
-        'https://upload.wikimedia.org/wikipedia/commons/thumb/6/6b/Emoji_u1f33b.svg/72px-Emoji_u1f33b.svg.png',
-        'https://upload.wikimedia.org/wikipedia/commons/thumb/4/49/Emoji_u1f33c.svg/72px-Emoji_u1f33c.svg.png',
-        'https://upload.wikimedia.org/wikipedia/commons/thumb/1/1f/Emoji_u1f337.svg/72px-Emoji_u1f337.svg.png',
-        'https://upload.wikimedia.org/wikipedia/commons/thumb/e/e7/Emoji_u1f33a.svg/72px-Emoji_u1f33a.svg.png'
-      ];
-
-      for (let i = 0; i < 10; i++) {
-        const flower = document.createElement('div');
-        flower.className = 'flower';
-        flower.style.left = Math.random() * 100 + 'vw';
-        flower.style.backgroundImage = `url('${flowerImages[Math.floor(Math.random() * flowerImages.length)]}')`;
-        flower.style.animationDuration = (3 + Math.random() * 3) + 's';
-        overlay.appendChild(flower);
-
-        // remove after animation
-        setTimeout(() => flower.remove(), 6000);
-      }
-    }
 
     function loadDashboard(i) {
       frame.src = dashboards[i].url + "?v=" + new Date().getTime();
-      frame.className = "active";
+      frame.className = "slide-up";
+      void frame.offsetWidth; // force reflow for animation
+      frame.classList.add("active");
     }
 
     function rotateDashboard() {
       frame.classList.remove("active");
-      startLiveClock();
 
+      // Update header with current time
+      const now = new Date();
+      const formattedTime = now.toLocaleString('en-GB', {
+        day: '2-digit',
+        month: 'short',
+        year: 'numeric',
+        hour: '2-digit',
+        minute: '2-digit',
+        second: '2-digit'
+      }).replace(',', '');
+      
+      overlayTitle.textContent = `PHARMA/BEIBORA TELESALES PERFORMANCE AS AT ${formattedTime} | # OPERATION NIGHT HAMMER`;
+
+      // Show overlay banner
       overlay.style.display = "flex";
-      showDancingFlowers();
       requestAnimationFrame(() => { overlay.style.opacity = 1; });
 
+      // Keep overlay for 10 seconds
       setTimeout(() => {
         overlay.style.opacity = 0;
-        clearInterval(clockInterval);
         setTimeout(() => {
           overlay.style.display = "none";
           index = (index + 1) % dashboards.length;
+
           loadDashboard(index);
+
+          // Schedule next rotation AFTER dashboard duration
           clearTimeout(rotationTimer);
           rotationTimer = setTimeout(rotateDashboard, dashboards[index].duration);
+
         }, 1000);
       }, 10000);
     }
 
-    // ✅ Always start with Pharma
-    index = 0;
+    // Initialize
     loadDashboard(index);
     rotationTimer = setTimeout(rotateDashboard, dashboards[index].duration);
   </script>
+
 </body>
 </html>
+
+
+
