--- a/Pharma_Beibora_Flip.html
+++ b/Pharma_Beibora_Flip.html
@@ -11,6 +11,7 @@
       overflow: hidden;
       background: black;
       font-family: Arial, sans-serif;
+      perspective: 1000px; /* Enables 3D depth for rotation */
     }
 
     /* Dashboard frame */
@@ -23,17 +24,17 @@
       left: 0;
       opacity: 0;
       z-index: 0;
+      transform-origin: center right;
+      transform: rotateY(90deg);
       transition: opacity 1s ease-in-out, transform 1s ease-in-out;
+      backface-visibility: hidden;
     }
 
     iframe.active {
       opacity: 1;
       z-index: 1;
+      transform: rotateY(0deg);
     }
-
-    /* --- Updated Transition: slide-up --- */
-    .slide-up { transform: translateY(100%); }
-    .slide-up.active { transform: translateY(0); }
 
     /* Overlay for banner */
     #imageOverlay {
@@ -96,11 +97,14 @@
 
   <script>
     const dashboards = [
-      { url: "Beibora_Telesales_Statistics.html", duration: 60000 }, 
-      { url: "Pharma_Telesales_Statistics.html", duration: 120000 }
+      { url: "Beibora_Telesales_Statistics.html", duration: 60000 }, //1 min time before flipping
+      { url: "Pharma_Telesales_Statistics.html", duration: 60000 }  //1 min time before flipping
     ];
 
-    let index = 0;
+    // Load last dashboard index from localStorage or start with Pharma (index 1)
+    let savedIndex = localStorage.getItem('dashboardIndex');
+    let index = savedIndex ? parseInt(savedIndex) : 1;
+
     const frame = document.getElementById("dashboardFrame");
     const overlay = document.getElementById("imageOverlay");
     const overlayTitle = document.getElementById("overlayTitle");
@@ -108,8 +112,8 @@
 
     function loadDashboard(i) {
       frame.src = dashboards[i].url + "?v=" + new Date().getTime();
-      frame.className = "slide-up";
-      void frame.offsetWidth; // force reflow for animation
+      frame.className = "";
+      void frame.offsetWidth; // Force reflow for animation
       frame.classList.add("active");
     }
 
@@ -138,7 +142,10 @@
         overlay.style.opacity = 0;
         setTimeout(() => {
           overlay.style.display = "none";
+
+          // Move to next dashboard
           index = (index + 1) % dashboards.length;
+          localStorage.setItem('dashboardIndex', index);
 
           loadDashboard(index);
 
@@ -157,6 +164,3 @@
 
 </body>
 </html>
-
-
-
