--- a/Pharma_Beibora_Flip.html
+++ b/Pharma_Beibora_Flip.html
@@ -26,7 +26,7 @@
       z-index: 0;
       transform-origin: center right;
       transform: rotateY(90deg);
-      transition: opacity 1s ease-in-out, transform 1s ease-in-out;
+      transition: opacity 2s ease-in-out, transform 2s ease-in-out; /* slower rotation */
       backface-visibility: hidden;
     }
 
@@ -50,7 +50,7 @@
       justify-content: flex-start;
       z-index: 10;
       opacity: 0;
-      transition: opacity 1s ease-in-out;
+      transition: opacity 1.5s ease-in-out; /* slower fade for banner */
       color: white;
     }
 
@@ -97,14 +97,11 @@
 
   <script>
     const dashboards = [
-      { url: "Beibora_Telesales_Statistics.html", duration: 60000 }, //1 min time before flipping
-      { url: "Pharma_Telesales_Statistics.html", duration: 60000 }  //1 min time before flipping
+      { url: "Pharma_Telesales_Statistics.html", duration: 60000 }, // Show for 1 min
+      { url: "Beibora_Telesales_Statistics.html", duration: 60000 } // Show for 1 min
     ];
 
-    // Load last dashboard index from localStorage or start with Pharma (index 1)
-    let savedIndex = localStorage.getItem('dashboardIndex');
-    let index = savedIndex ? parseInt(savedIndex) : 1;
-
+    let index = 0; // Always start with Pharma
     const frame = document.getElementById("dashboardFrame");
     const overlay = document.getElementById("imageOverlay");
     const overlayTitle = document.getElementById("overlayTitle");
@@ -145,7 +142,6 @@
 
           // Move to next dashboard
           index = (index + 1) % dashboards.length;
-          localStorage.setItem('dashboardIndex', index);
 
           loadDashboard(index);
 
@@ -153,7 +149,7 @@
           clearTimeout(rotationTimer);
           rotationTimer = setTimeout(rotateDashboard, dashboards[index].duration);
 
-        }, 1000);
+        }, 1500); // smoother fade-out delay
       }, 10000);
     }
 
@@ -164,3 +160,4 @@
 
 </body>
 </html>
+
