--- a/Pharma_Beibora_Flip.html
+++ b/Pharma_Beibora_Flip.html
@@ -11,7 +11,7 @@
       overflow: hidden;
       background: black;
       font-family: Arial, sans-serif;
-      perspective: 1000px; /* Enables 3D depth for rotation */
+      perspective: 1500px; /* enables deeper 3D look */
     }
 
     /* Dashboard frame */
@@ -24,8 +24,8 @@
       left: 0;
       opacity: 0;
       z-index: 0;
-      transform-origin: center right;
-      transform: rotateY(90deg);
+      transform-origin: center;
+      transform: rotateY(180deg); /* start fully flipped */
       transition: opacity 2s ease-in-out, transform 4s ease-in-out;
       backface-visibility: hidden;
     }
@@ -33,7 +33,7 @@
     iframe.active {
       opacity: 1;
       z-index: 1;
-      transform: rotateY(0deg);
+      transform: rotateY(0deg); /* rotate into view */
     }
 
     /* Overlay for banner */
@@ -50,11 +50,11 @@
       justify-content: flex-start;
       z-index: 10;
       opacity: 0;
-      transition: opacity 1.5s ease-in-out;
+      transition: opacity 2s ease-in-out;
       color: white;
     }
 
-    /* Banner header with styled background */
+    /* Banner header */
     #imageOverlay header {
       position: absolute;
       top: 0;
@@ -71,7 +71,7 @@
       border-bottom: 2px solid #00ffcc;
     }
 
-    /* Fullscreen background image */
+    /* Banner image */
     #imageOverlay img {
       position: absolute;
       top: 0;
@@ -80,10 +80,11 @@
       height: 100%;
       object-fit: cover;
       z-index: 1;
-      opacity: 0.8;
+      opacity: 0.85;
       animation: slowZoom 20s ease-in-out infinite alternate;
     }
 
+    /* Background motion effect */
     @keyframes slowZoom {
       from { transform: scale(1); }
       to { transform: scale(1.05); }
@@ -102,20 +103,19 @@
   </div>
 
   <script>
-    // Define dashboards
+    // Dashboard list
     const dashboards = [
-      { url: "Pharma_Telesales_Statistics.html", duration: 60000 }, // Show for 1 min
-      { url: "Beibora_Telesales_Statistics.html", duration: 60000 }  // Show for 1 min
+      { url: "Pharma_Telesales_Statistics.html", duration: 60000 },
+      { url: "Beibora_Telesales_Statistics.html", duration: 60000 }
     ];
 
-    let index = 0; // Always start with Pharma
+    let index = 0; // Start with Pharma
     const frame = document.getElementById("dashboardFrame");
     const overlay = document.getElementById("imageOverlay");
     const overlayTitle = document.getElementById("overlayTitle");
-    let rotationTimer;
-    let timeUpdater;
+    let rotationTimer, timeUpdater;
 
-    // Get formatted current time
+    // --- Time formatting ---
     function getFormattedTime() {
       const now = new Date();
       return now.toLocaleString('en-GB', {
@@ -128,62 +128,64 @@
       }).replace(',', '');
     }
 
-    // Start updating banner time live
+    // --- Live clock on banner ---
     function startLiveClock() {
       if (timeUpdater) clearInterval(timeUpdater);
       timeUpdater = setInterval(() => {
-        overlayTitle.textContent = `PHARMA/BEIBORA TELESALES PERFORMANCE AS AT ${getFormattedTime()} | # OPERATION NIGHT HAMMER`;
+        overlayTitle.textContent =
+          `PHARMA/BEIBORA TELESALES PERFORMANCE AS AT ${getFormattedTime()} | # OPERATION NIGHT HAMMER`;
       }, 1000);
     }
 
-    // Load a specific dashboard
+    // --- Load specific dashboard ---
     function loadDashboard(i) {
       overlay.style.display = "none";
       frame.src = dashboards[i].url + "?v=" + new Date().getTime();
       frame.className = "";
-      void frame.offsetWidth; // Reflow to reset animation
+      void frame.offsetWidth;
       frame.classList.add("active");
     }
 
-    // Show overlay banner between dashboards
+    // --- Show banner between dashboards ---
     function showBanner(nextStepCallback) {
       startLiveClock();
       overlay.style.display = "flex";
       requestAnimationFrame(() => { overlay.style.opacity = 1; });
 
-      // Keep banner for 10 seconds
+      // Banner stays for 10s
       setTimeout(() => {
         overlay.style.opacity = 0;
         setTimeout(() => {
           overlay.style.display = "none";
           if (nextStepCallback) nextStepCallback();
-        }, 1500);
+        }, 2000);
       }, 10000);
     }
 
-    // Full rotation logic (Pharma → Banner → Beibora → Banner → loop)
+    // --- Rotation logic (Pharma → Banner → Beibora → Banner → Loop) ---
     function rotateDashboard() {
       frame.classList.remove("active");
 
-      // Determine current dashboard and next
+      // Determine next dashboard
       const nextIndex = (index + 1) % dashboards.length;
 
-      // Step 1: show banner between dashboards
+      // Step 1: show banner
       showBanner(() => {
-        // Step 2: switch to next dashboard
+        // Step 2: switch to next dashboard with rotation
         index = nextIndex;
         loadDashboard(index);
 
-        // Step 3: schedule next flip (after dashboard duration)
+        // Step 3: schedule next rotation
         clearTimeout(rotationTimer);
         rotationTimer = setTimeout(rotateDashboard, dashboards[index].duration);
       });
     }
 
-    // Initialize display
+    // Initialize
     loadDashboard(index);
     rotationTimer = setTimeout(rotateDashboard, dashboards[index].duration);
   </script>
 
 </body>
 </html>
+
